--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,3 +83,25 @@ button {
     background-color:var(--tertiary-color);
   }
 
+  @media screen and (min-width: 200px) and (max-width: 767px)  {
+    p {
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 1px;
+    }
+
+    h1 {
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    button {
+        padding: 10px;
+        font-size: 20px;
+        letter-spacing: 1px;
+        margin-top: 15px;
+        border-radius: 12px;
+      }
+
+  }
+
