--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,24 +27,11 @@ header {
     flex-wrap: wrap;
 }
 
-.scores {
-    color: var(--tertiary-color);
-}
-
-main {
-    display:flex;
-    justify-content: center;
-
-}
-
-.quiz {
-    width: 50%;
-    text-align:center;
-}
-
 h1 {
+    
+    color: #000;
     font-size: 40px;
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
 }
 
 p {
@@ -65,7 +52,55 @@ a:hover {
     border: 2px thin #5494cd;
 }
 
-button {
+.scores {
+    color: var(--tertiary-color);
+}
+
+main {
+    display:flex;
+    justify-content: center;
+}
+
+.welcome {
+    width: 50%;
+    text-align:center;
+    display:none;
+}
+
+.quizContent {
+    display:block;/*switch to display:block*/
+    width: 50%;
+}
+
+.quizQuestions {
+    display:none;/*switch to display:block*/
+}
+
+.result {
+    display:block;
+    color: #cccccc;
+    font-style: italic;
+    font-size: 25px;
+    letter-spacing: 2px;
+    margin-top: 15px;
+}
+
+.done {
+    width: 50%;
+}
+
+input[type=text] {
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    height: 20px;
+  }
+
+hr {
+    margin-top: 20px;
+    border-top: 1px solid #cccccc;
+}
+
+.quizBtn {
     background-color:var(--secondary-color);
     color: var(--quaternary-color);
     padding: 10px;
@@ -82,6 +117,23 @@ button {
   button:hover {
     background-color:var(--tertiary-color);
   }
+
+  .initialBtn {
+    background-color:var(--secondary-color);
+    color: var(--quaternary-color);
+    padding: 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    letter-spacing: 2px;
+    margin-top: 20px;
+    border-radius: 8px;
+    border: 0px;
+    width: 100px;
+  }
+
+
 
   @media screen and (min-width: 200px) and (max-width: 767px)  {
     p {
