--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*.container {
+    width: auto;
+    flex: display;
+    justify-content: center;
+    text-align: center;
+}*/
+
 header {
     padding: 25px 25px;
     background-position: 80%;
@@ -57,19 +64,22 @@ a:hover {
 }
 
 main {
-    display:flex;
-    justify-content: center;
+
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
 }
 
 .welcome {
-    width: 50%;
     text-align:center;
-    display:none;
+    display:none;/*switch to display:none*/
+    /*border: 5px solid red;*/
 }
 
 .quizContent {
     display:block;/*switch to display:block*/
-    width: 50%;
+    width: 100%;
 }
 
 .quizQuestions {
@@ -77,16 +87,21 @@ main {
 }
 
 .result {
-    display:block;
+    display:none;/*switch to display:block*/
     color: #cccccc;
     font-style: italic;
     font-size: 25px;
     letter-spacing: 2px;
     margin-top: 15px;
+    /*border: 5px solid red;*/
+    
+    
 }
 
 .done {
-    width: 50%;
+    display: none;
+    
+    
 }
 
 input[type=text] {
@@ -130,10 +145,27 @@ hr {
     margin-top: 20px;
     border-radius: 8px;
     border: 0px;
-    width: 100px;
+    /*width: 100px;*/
   }
 
+.scoreList {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+}
 
+ul {
+    list-style-type: none;
+    margin-top: 15px;
+}
+
+li {
+    color: var(--tertiary-color);
+    background-color: #d9d3e9;
+    padding: 5px;
+    width: 250px;
+}
 
   @media screen and (min-width: 200px) and (max-width: 767px)  {
     p {
