--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,7 +73,7 @@ main {
 
 .welcome {
     text-align:center;
-    display:none;/*switch to display:none*/
+    display:block;/*switch to display:none*/
     /*border: 5px solid red;*/
 }
 
@@ -94,8 +94,6 @@ main {
     letter-spacing: 2px;
     margin-top: 15px;
     /*border: 5px solid red;*/
-    
-    
 }
 
 .done {
@@ -115,7 +113,7 @@ hr {
     border-top: 1px solid #cccccc;
 }
 
-.quizBtn {
+button {
     background-color:var(--secondary-color);
     color: var(--quaternary-color);
     padding: 10px;
@@ -131,6 +129,10 @@ hr {
 
   button:hover {
     background-color:var(--tertiary-color);
+  }
+
+  .choice {
+      display:block;
   }
 
   .initialBtn {
@@ -149,7 +151,7 @@ hr {
   }
 
 .scoreList {
-    display: block;
+    display: none;/*Turn on display*/
     margin-left: auto;
     margin-right: auto;
     width: 300px;
