--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,6 +149,10 @@ button  {
       display:visible;
   }
 
+  .block {
+      display: block;
+  }
+
   .initialBtn {
     background-color:var(--secondary-color);
     color: var(--quaternary-color);
@@ -161,26 +165,46 @@ button  {
     margin-top: 20px;
     border-radius: 8px;
     border: 0px;
+    clear: both;
     /*width: 100px;*/
   }
 
+.scoreSpace {
+    width: 200px;
+    display: inline;
+}
+
+#initials, #scoreDisplay {
+    width: 50%;
+    
+
+}
+
+#initials {
+    float:left;
+}
+
+#scoreDisplay {
+    float: right;
+}
+
 .scoreList {
+
+    text-align:center;
     display: none;/*Turn on display*/
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 265px;
+}
+
+.scoreCenter {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 ul {
     list-style-type: none;
     margin-top: 15px;
-}
-
-li {
-    color: var(--tertiary-color);
-    background-color: #d9d3e9;
-    padding: 5px;
-    width: 250px;
 }
 
   @media screen and (min-width: 200px) and (max-width: 767px)  {
